fix: actualizar title en index.html y autorizar origenes de produccion en CORS